--- a/lab1.html
+++ b/lab1.html
@@ -10,7 +10,7 @@
 		body{
 			background-color:rgb(6, 242, 190);
 			height: 100%;
-			width: fit-content;
+			width: 100%;
 		}
 	</style>
 </head>
