--- a/lab11.html
+++ b/lab11.html
@@ -13,7 +13,7 @@
 <body>
 	
 	<table id="header" border="0" width="50%"
-		cellpadding="0" cellspacing="0" bgcolor="black" style="height: max-content;">
+		cellpadding="0" cellspacing="0" bgcolor="black" >
 		<tr>
 			<td>
 				<table border="0" cellpadding="10"
