--- a/lab11.html
+++ b/lab11.html
@@ -13,7 +13,7 @@
 <body>
 	
 	<table id="header" border="0" width="200%"
-		cellpadding="0" cellspacing="0" bgcolor="black" >
+		cellpadding="0" cellspacing="0" bgcolor="black"  style="text-align: center;" >
 		<tr>
 			<td>
 				<table border="0" cellpadding="10"
