--- a/lab11.html
+++ b/lab11.html
@@ -17,7 +17,7 @@
 		<tr>
 			<td>
 				<table border="0" cellpadding="10"
-					cellspacing="0" width="120%" align="center">
+					cellspacing="0" width="120%">
 					<tr>
 						
 
