--- a/lab11.html
+++ b/lab11.html
@@ -12,7 +12,7 @@
 
 <body>
 	
-	<table id="header" border="0" width="100%"
+	<table id="header" border="0" width="auto"
 		cellpadding="0" cellspacing="0" bgcolor="black"   >
 		<tr>
 			<td>
