--- a/lab11.html
+++ b/lab11.html
@@ -12,12 +12,12 @@
 
 <body>
 	
-	<table id="header" border="0" width="auto"
+	<table id="header" border="0" width="100%"
 		cellpadding="0" cellspacing="0" bgcolor="black"   >
 		<tr>
 			<td>
 				<table border="0" cellpadding="5"
-					cellspacing="0" width="120%">
+					cellspacing="0" width="67%">
 					<tr>
 						
 
