--- a/lab11.html
+++ b/lab11.html
@@ -229,7 +229,7 @@
 									
 									<li>
 										<hr color="white">
-										VIT AP Night Canteen Menu and available stock(ongoing)
+										VIT AP Night Canteen order Menu and show available stock using HTML,CSS, PHP and MYSQL
 										
 									</li>
 
