--- a/lab11.html
+++ b/lab11.html
@@ -331,7 +331,7 @@
 
 						<td width="13%" valign="top" style="text-align: center;">
 							<b>GitHub</b>
-							<a href="https://gist.github.com/mansing2000" target="_blank" style="text-decoration:none">
+							<a href="https://github.com/mansing1510" target="_blank" style="text-decoration:none">
 								➲
 							</a>
 						</td>
