--- a/lab11.html
+++ b/lab11.html
@@ -168,7 +168,7 @@
 										<td>UG</td>
 										<td>VIT-AP University</td>
 										<td>SCOPE</td>
-										<td>8.7</td>
+										<td>8.65</td>
 										<td>2020-2024</td>
 									</tr>
 									<tr>
@@ -250,7 +250,7 @@
 
 									<li>
 										<hr color="#c2c0c3">
-										Travel Management System
+										Travel Time Management System
 										
 									</li>
 								</ul>
