--- a/lab11.html
+++ b/lab11.html
@@ -296,6 +296,8 @@
                                 <li>CSS              ***</li>
                                 <hr color="#c2c0c3" >
                                 <li>JAVASCRIPT       ***</li>
+				<hr color="#c2c0c3" >
+                                <li>PHP       ***</li>
                                 <hr color="#c2c0c3" >
                                 <li>PYTHON             **</li>
 									
